# OpenPrism

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  install.ps1  install.sh  providers.json.example  pyproject.toml  requirements.txt  uninstall.ps1  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
commands/: openprism-bakeoff.md  openprism-code.md  openprism-models.md  openprism.md
integrations/opencode/: opencode.json
integrations/opencode/commands/: openprism-bakeoff.md  openprism-code.md  openprism-models.md  openprism.md
openprism/: __init__.py  cli.py  config.py  doctor.py  init_cmd.py  judge.py  mcp_server.py  panel.py  pipeline.py  prompts.py
openprism/backends/: __init__.py  base.py  direct.py  opencode.py
tests/: smoke_mcp.py  test_openprism.py
